# zeroframework

./: CMakeLists.txt  dlsym_helper.cpp  dlsym_helper.h  dlsym_weak.cpp  dlsym_weak.h  file_so_patcher.cpp  file_so_patcher.h  lib_utils.cpp  lib_utils.h  maps_helper.cpp  maps_helper.h  mem_so_patcher.cpp  mem_so_patcher.h  ptrace_mem_so_patcher.cpp  ptrace_mem_so_patcher.h  reloc_hook_manager.cpp  reloc_hook_manager.h  so_patch.h  soname_patch_creator.cpp  soname_patch_creator.h
include/zerof/: dlsym_helper.h  elf.h  file_so_patcher.h  lib_utils.h  maps_helper.h  ptrace_mem_so_patcher.h  reloc_hook_manager.h  soname_patch_creator.h
src/: dlsym_helper.cpp  file_so_patcher.cpp  lib_utils.cpp  maps_helper.cpp  mem_so_patcher.cpp  ptrace_mem_so_patcher.cpp  reloc_hook_manager.cpp  soname_patch_creator.cpp
